examples/errors/assign-to-macro-global.spcasm
org 0

macro my_macro
	\@ = $40
endmacro

%my_macro()
